Fix for error label alignments

--- a/src/app.scss
+++ b/src/app.scss
@@ -146,3 +146,7 @@ img {
         width: 1372px;
     }
 }
+
+.invalid {
+    text-align: right;
+}
